--- a/.github/workflows/main_hastydevapi.yml
+++ b/.github/workflows/main_hastydevapi.yml
@@ -23,7 +23,9 @@ jobs:
 
       - name: npm install, build, and test
         run: |
+          cd  backend/
           npm install
+          npm run devStart
           npm run build --if-present
           npm run test --if-present
 
