Adicionando o run start

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "devStart": "nodemon --watch App.js",
-    "build": "tsup src"
+    "start": "node src/App.js"
   },
   "keywords": [],
   "author": "",
