Ajuste no diretorio

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "devStart": "nodemon --watch App.js",
+    "devStart": "nodemon --watch src/App.js",
     "start": "node src/App.js"
   },
   "keywords": [],
