--- a/.github/workflows/main_hastydev.yml
+++ b/.github/workflows/main_hastydev.yml
@@ -22,7 +22,8 @@ jobs:
           node-version: '18.x'
 
       - name: npm install, build, and test
-        run: |
+        run: 
+          cd frontend
           npm install
           npm run build --if-present
           npm run test --if-present
