--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-slick": "^0.29.0",
     "react-social-login-buttons": "^3.9.1",
     "react-switch": "^7.0.0",
+    "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.2",
     "styled-components": "^6.0.8",
