--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.0",
     "mongose": "^0.0.2-security",
     "mysql2": "^3.6.1",
     "nodemailer": "^6.9.6",
