--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,8 @@
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.2",
     "styled-components": "^6.0.8",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.9.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
