--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -3,7 +3,7 @@
     "builds": [
         {
             "src": "src/App.js",
-            "vercel": "@vercel/node"
+            "use": "@vercel/node"
         }
     ],
     "routes": [
