--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/node": "^20.8.4",
     "@types/styled-components": "^5.1.28",
-    "axios": "^1.5.1",
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
@@ -33,16 +33,19 @@
     "socket.io-client": "^4.7.2",
     "styled-components": "^6.0.8",
     "sweetalert": "^2.1.2",
-    "sweetalert2": "^11.9.0",
-    "yup": "^1.3.2"
+    "sweetalert2": "^11.6.13",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.7",
     "@types/prop-types": "^15.7.8",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-router-dom": "^5.3.3",
     "@types/react-slick": "^0.23.11",
+    "@types/react-toastify": "^4.1.0",
     "@types/scheduler": "^0.16.4",
+    "@types/socket.io-client": "^3.0.0",
     "@types/stylis": "^4.2.1",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
