--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "devStart": "nodemon --watch src/App.js",
-    "start": "node src/App.js"
+    "start": "node src/App.js",
+    "build": "npm install"
   },
   "keywords": [],
   "author": "",
