--- a/backend/package.json
+++ b/backend/package.json
@@ -16,15 +16,17 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
+    "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
     "mongose": "^0.0.2-security",
     "mysql2": "^3.6.3",
     "nodemailer": "^6.9.6",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "pino": "^8.16.0",
     "sequelize": "^6.33.0",
     "socket.io": "^4.7.2",
