--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "react-slick": "^0.29.0",
