--- a/backend/package.json
+++ b/backend/package.json
@@ -1,38 +1,38 @@
 {
-  "name": "back-end",
+  "name": "hastydevapi",
   "version": "1.0.0",
-  "description": "",
+  "description": "Uma API da HastyDEV com função de estavelecer relação entre a aplicação backend e o banco de dados, além de conter regras de negócios, lidar com autenticação e outros.",
+  "main": "src/app.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "devStart": "nodemon --watch src/App.js",
-    "start": "node src/App.js",
-    "build": "npm install"
+    "dev": "nodemon",
+    "build": "tsc",
+    "start": "node ./dist/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Jefferson Laurindo da Silva, Lucas Quinteiro Campos",
+  "license": "MIT",
   "dependencies": {
     "bad-words": "^3.0.4",
     "bcrypt": "^5.1.1",
-    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.1",
     "express": "^4.18.2",
-    "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.0",
-    "mongose": "^0.0.2-security",
-    "mysql2": "^3.6.3",
-    "nodemailer": "^6.9.6",
-    "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0",
-    "pino": "^8.16.0",
-    "sequelize": "^6.33.0",
-    "socket.io": "^4.7.2",
-    "tsup": "^7.2.0"
+    "mongoose": "^8.1.1",
+    "mysql2": "^3.9.1",
+    "nodemailer": "^6.9.9",
+    "pino": "^8.18.0",
+    "sequelize": "^6.36.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "@types/bad-words": "^3.0.3",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/nodemailer": "^6.4.14",
+    "dotenv": "^16.4.1",
+    "nodemon": "^3.0.3",
+    "typescript": "^5.3.3"
   }
 }
