--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,8 @@
   "description": "Uma API da HastyDEV com função de estavelecer relação entre a aplicação backend e o banco de dados, além de conter regras de negócios, lidar com autenticação e outros.",
   "main": "src/app.ts",
   "scripts": {
-    "dev": "nodemon",
-    "build": "npm install && tsc",
-    "start": "node ./dist/index.js",
+    "start": "nodemon",
+    "build": "npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jefferson Laurindo da Silva, Lucas Quinteiro Campos",
