--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon",
     "build": "npm install && tsc",
-    "start": "node ./dist/index.js",
+    "start": "node /dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jefferson Laurindo da Silva, Lucas Quinteiro Campos",
