--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/node": "^20.8.4",
     "@types/styled-components": "^5.1.28",
+    "@vercel/analytics": "^1.1.3",
+    "@vercel/speed-insights": "^1.0.9",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "formik": "^2.4.5",
