--- a/App/package.json
+++ b/App/package.json
@@ -15,12 +15,16 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.18.0",
-    "styled-components": "^6.1.8"
+    "react-toastify": "^10.0.4",
+    "styled-components": "^6.1.8",
+    "sweetalert2": "^11.10.6",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
