--- a/App/package.json
+++ b/App/package.json
@@ -20,8 +20,9 @@
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
-    "react-router-dom": "^6.18.0",
+    "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.4",
+    "socket.io-client": "^4.7.4",
     "styled-components": "^6.1.8",
     "sweetalert2": "^11.10.6",
     "yup": "^1.4.0"
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/socket.io-client": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
