--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "pino": "^8.18.0",
     "sequelize": "^6.36.0",
     "sharp": "^0.33.2",
+    "socket.io": "^4.7.4",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
@@ -36,6 +37,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.11",
     "@types/nodemailer": "^6.4.14",
+    "@types/socket.io": "^3.0.2",
     "dotenv": "^16.4.1",
     "nodemon": "^3.0.3",
     "typescript": "^5.3.3"
