--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,9 @@
     "sequelize": "^6.36.0",
     "sharp": "^0.33.2",
     "socket.io": "^4.7.4",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "winston": "^3.12.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@types/bad-words": "^3.0.3",
