--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "./src/app.ts",
   "scripts": {
     "dev": "nodemon",
-    "build": "npm install && tsc",
+    "build": "npm install && tsc && cp src/api/controllers/Email/emailConfirmation.html dist/api/controllers/Email/",
     "start": "node ./dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
