--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "sequelize": "^6.36.0",
     "sharp": "^0.33.3",
     "socket.io": "^4.7.4",
+    "supertest": "^6.3.4",
     "ts-node": "^10.9.2",
     "winston": "^3.12.0",
     "winston-daily-rotate-file": "^5.0.0"
@@ -36,10 +37,12 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.11",
     "@types/nodemailer": "^6.4.14",
     "@types/socket.io": "^3.0.2",
+    "@types/supertest": "^6.0.2",
     "dotenv": "^16.4.1",
     "nodemon": "^3.0.3",
     "typescript": "^5.3.3"
