--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.9",
     "pino": "^8.18.0",
     "sequelize": "^6.36.0",
@@ -40,6 +41,7 @@
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.11",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.14",
     "@types/socket.io": "^3.0.2",
     "@types/supertest": "^6.0.2",
