fix: fixing imports with MVVM pattern

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -25,6 +25,6 @@
     "include": ["src", "src/**/*.ts", "src/**/*.tsx", "src/**/*.d.ts"],
     "references": [{ "path": "./tsconfig.node.json" }],
     "files": [
-      "src/ui/styles/styled.d.ts"
+      "src/view/styles/styled.d.ts"
     ],
   }
